# pyfinance

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE.txt  README.md  README.rst  Taskfile.yml  __init__.py  datasets.py  general.py  ols.py  options.py  pyproject.toml  returns.py  setup.py  utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
pyfinance/: __init__.py  datasets.py  general.py  ols.py  options.py  returns.py  utils.py
src/pyfinance/: __init__.py  datasets.py  general.py  ols.py  options.py  returns.py  utils.py
tests/: pdr.csv  test_datasets.py  test_general.py  test_ols.py  test_options.py  test_options_strategies.py  test_returns.py  test_utils.py
